--- a/translations/admin.vi.yaml
+++ b/translations/admin.vi.yaml
@@ -1,8 +1,12 @@
 # Author Admin
-admin.author.name: 'Họ Tên'
-admin.author.email: 'Email'
-admin.author.projects: 'Dự án'
+admin.author.name: Họ Tên
+admin.author.email: Email
+admin.author.projects: Dự án
+
 # Project Admin
-admin.project.name: 'Tên dự án'
-admin.project.description: 'Mô tả'
-admin.project.author: 'Tác giả'
+admin.project.name: Tên dự án
+admin.project.description: Mô tả
+admin.project.author: Tác giả
+
+# Sonata Admin
+sonata.admin.page.action.global: Trang chung
